--- a/scripts/evaluate/evaluate_extraction_methods.ipynb
+++ b/scripts/evaluate/evaluate_extraction_methods.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26513748",
    "metadata": {},
@@ -47,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09ea84b5",
    "metadata": {},
@@ -100,6 +102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1126f14c",
    "metadata": {},
@@ -164,6 +167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "483d656e",
    "metadata": {},
@@ -235,6 +239,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7828c581",
    "metadata": {},
@@ -279,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3ea20b9",
    "metadata": {},
@@ -332,6 +338,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "10908511",
    "metadata": {},
@@ -434,6 +441,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4bcd465f",
    "metadata": {},
@@ -497,6 +505,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "676eddfb",
    "metadata": {},
@@ -548,6 +557,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c72c9f03",
    "metadata": {},
@@ -595,6 +605,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ac25e1b4",
    "metadata": {},
@@ -603,6 +614,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "46678ae2",
    "metadata": {},
@@ -638,7 +650,7 @@
     "f_gmm = f[ind_nol[:,None],ind]\n",
     "\n",
     "# Perform the actual clustering. \n",
-    "gmm = GaussianMixture(n_components=2, covariance_type=\"full\")\n",
+    "gmm = GaussianMixture(n_components=2, covariance_type=\"full\", n_init=10, random_state=0)\n",
     "gmm_labels = gmm.fit_predict(f_gmm)\n",
     "\n",
     "total_gmm = len(gmm_labels)\n",
@@ -654,6 +666,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d20214b3",
    "metadata": {},
@@ -718,7 +731,7 @@
     "    f = f[ind_nol[:,None],ind]\n",
     "\n",
     "    # Perform the actual clustering. \n",
-    "    gmm = GaussianMixture(n_components=2, covariance_type=\"full\")\n",
+    "    gmm = GaussianMixture(n_components=2, covariance_type=\"full\", n_init=10, random_state=0)\n",
     "    gmm_labels = gmm.fit_predict(f)\n",
     "    \n",
     "    total_gmm = len(gmm_labels)\n",
@@ -834,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
