Fixed bugs related to MLP dataset generation

--- a/scripts/train/train_mlp-core-affinity.ipynb
+++ b/scripts/train/train_mlp-core-affinity.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,6 +280,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -288,19 +293,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data in (\"training-data\", \"validation-data\"):\n",
-    "    with h5py.File(f\"{directory_data}/mlp-detectcore-{data}.hdf5\", 'x', libver='latest') as f:\n",
+    "for mlp_data in (\"training-data\", \"validation-data\"):\n",
+    "    with h5py.File(f\"{directory_data}/mlp-detectcore-{mlp_data}.hdf5\", 'x', libver='latest') as f:\n",
     "        expg = f.create_group(\"data\")\n",
-    "        freqsDset = expg.create_dataset(\"traces\", (len(files)*4096*4, 2000), dtype='float32')\n",
-    "        expectedDset = expg.create_dataset(\"expected\", (len(files)*4096*4, 2), dtype='uint8')\n",
+    "        freqsDset = expg.create_dataset(\"traces\", (4*4*4096*4, 2000), dtype='float32')\n",
+    "        expectedDset = expg.create_dataset(\"expected\", (4*4*4096*4, 2), dtype='uint8')\n",
     "        traces_i = 0\n",
     "\n",
     "        for core in range(4):\n",
-    "            dir = f\"{directory_data}/core-{core}/{data}/\"\n",
+    "            dir = f\"{directory_data}/core-{core}/{mlp_data}/\"\n",
     "            files = [f for f in os.listdir(dir) if f.endswith(\".hdf5\")][:4]  # 4 batches for each core\n",
     "\n",
     "            for file in tqdm(files):\n",
-    "                with h5py.File(f\"{dir}/file\", 'r', libver='latest') as f_traces:\n",
+    "                with h5py.File(f\"{dir}/{file}\", 'r', libver='latest') as f_traces:\n",
     "                    traces = f_traces['data']['traces']\n",
     "                    inputs = f_traces['data']['inputs']\n",
     "\n",
@@ -320,6 +325,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -332,19 +338,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data in (\"training-data\", \"validation-data\"):\n",
-    "    with h5py.File(f\"{directory_data}/mlp-predictbit-{data}.hdf5\", 'x', libver='latest') as f:\n",
+    "for mlp_data in (\"training-data\", \"validation-data\"):\n",
+    "    with h5py.File(f\"{directory_data}/mlp-predictbit-{mlp_data}.hdf5\", 'x', libver='latest') as f:\n",
     "        expg = f.create_group(\"data\")\n",
-    "        freqsDset = expg.create_dataset(\"traces\", (len(files)*4096*4, 1000), dtype='float32')\n",
-    "        expectedDset = expg.create_dataset(\"expected\", (len(files)*4096*4, 2), dtype='uint8')\n",
+    "\n",
+    "        dir = f\"{directory_data}/core-0/{mlp_data}/\"\n",
+    "        files = [f for f in os.listdir(dir) if f.endswith(\".hdf5\")]\n",
+    "        freqsDset = expg.create_dataset(\"traces\", (2*len(files)*4096*4, 1000), dtype='float32')\n",
+    "        expectedDset = expg.create_dataset(\"expected\", (2*len(files)*4096*4, 2), dtype='uint8')\n",
     "        traces_i = 0\n",
     "\n",
     "        for core in range(2):  # To predict the bit, we only need to consider cores 0 and 1\n",
-    "            dir = f\"{directory_data}/core-{core}/{data}/\"\n",
+    "            dir = f\"{directory_data}/core-{core}/{mlp_data}/\"\n",
     "            files = [f for f in os.listdir(dir) if f.endswith(\".hdf5\")]\n",
     "\n",
     "            for file in tqdm(files):\n",
-    "                with h5py.File(f\"{dir}/file\", 'r', libver='latest') as f_traces:\n",
+    "                with h5py.File(f\"{dir}/{file}\", 'r', libver='latest') as f_traces:\n",
     "                    traces = f_traces['data']['traces']\n",
     "                    inputs = f_traces['data']['inputs']\n",
     "\n",
@@ -354,12 +363,13 @@
     "                    for i in range(traces.shape[0]):\n",
     "\n",
     "                        freqsDset[traces_i,:] = np.abs(fft(traces[i,window]))[:1000]\n",
-    "                        expectedDset[traces_i, get_bit_sp(i)] = 1\n",
+    "                        expectedDset[traces_i, get_bit_sp(inputs[i])] = 1\n",
     "\n",
     "                        traces_i += 1"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -370,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +475,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -490,6 +501,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -595,6 +607,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -618,6 +631,13 @@
     "    epochs=1000,\n",
     "    callbacks=callbacks_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
