--- a/scripts/train/train_mlp-noflushing.ipynb
+++ b/scripts/train/train_mlp-noflushing.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,8 +252,8 @@
    "outputs": [],
    "source": [
     "# The directories containing the training and validation traces\n",
-    "directory_train = \"../traces/4-mlp-data/2-reducing-assumptions/flushing/training-data/\"\n",
-    "directory_val   = \"../traces/4-mlp-data/2-reducing-assumptions/flushing/validation-data/\""
+    "directory_train = \"../traces/4-mlp-data/2-reducing-assumptions/2-flushing/training-data/\"\n",
+    "directory_val   = \"../traces/4-mlp-data/2-reducing-assumptions/2-flushing/validation-data/\""
    ]
   },
   {
@@ -293,17 +297,15 @@
     "                traces = f_traces['data']['traces']\n",
     "                inputs = f_traces['data']['inputs']\n",
     "\n",
-    "                window_start = f_traces.attrs[\"optimal_window_start\"]\n",
-    "                window = slice(window_start, window_start+5000)\n",
-    "\n",
     "                for i in tqdm(range(traces.shape[0]), leave=False):\n",
     "                    for j, window in enumerate(range(10000, 20100, 100)):\n",
     "                        freqsDset[traces_i,j*3:(j+1)*3] = np.abs(fft(traces[i,window:window+5000]))[[119,120,121]]\n",
-    "                    expectedDset[traces_i, get_bit_sp(i)] = 1\n",
+    "                    expectedDset[traces_i, get_bit_sp(inputs[i])] = 1\n",
     "                    traces_i += 1"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,6 +425,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
